--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #8a8888;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-1 {
+  width: 100%;
+  padding-right: 20px !important;
+  padding-left: 20px !important;
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+
+@media (min-width: 640px) {
+  .container-1 {
+    padding-right: 15px;
+    padding-left: 15px;
+    max-width: 610px;
+  }
+}
+@media (min-width: 768px) {
+  .container-1 {
+    max-width: 728px;
+  }
+}
+@media (min-width: 1024px) {
+  .container-1 {
+    max-width: 974px;
+  }
+}
+@media (min-width: 1280px) {
+  .container-1 {
+    max-width: 1180px;
+  }
+}
+@media (min-width: 1536px) {
+  .container-1 {
+    max-width: 1323px;
+  }
 }
